2013-02-26  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix a warning.

	* mln/canvas/labeling/sorted.hh,
	* mln/canvas/labeling/video.hh: Remove unused attribute.

2012-09-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/debug/draw_graph.hh: Add a new overload and fix comments.

2012-05-11  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/core/alias/neighb3d.hh: Fix invalid c8_3d neighborhood.

2012-05-11  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename point_at_index, delta_index and index_of_point.

	* mln/accu/line.hh,
	* mln/accu/transform_line.hh,
	* mln/border/duplicate.hh,
	* mln/border/fill.hh,
	* mln/convert/to_qimage.hh,
	* mln/core/concept/doc/image_fastest.hh,
	* mln/core/concept/window.hh,
	* mln/core/dpoints_pixter.hh,
	* mln/core/image/image1d.hh,
	* mln/core/image/image2d.hh,
	* mln/core/image/image3d.hh,
	* mln/core/internal/check/image_fastest.hh,
	* mln/core/internal/image_identity.hh,
	* mln/core/internal/pixel_impl.hh,
	* mln/core/pixel.hh,
	* mln/data/fill_with_value.spe.hh,
	* mln/data/memset_.hh,
	* mln/io/magick/load.hh,
	* mln/io/magick/save.hh,
	* mln/labeling/value_and_compute.hh,
	* mln/linear/gaussian_directional_2d.hh,
	* mln/subsampling/antialiased.hh,
	* mln/trait/image/props.hh,
	* mln/transform/internal/closest_point_functor.hh,
	* mln/world/binary_2d/subsample.hh: Rename point_at_index,
	delta_index and index_of_point to point_at_offset, delta_offset
	and offset_of_point.

2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Rely on Argument-Dependent Lookup (ADL) in from_to_ overloads.

	* mln/accu/count_labels.hh,
	* mln/convert/from_to.hxx	,
	* mln/convert/to.hh,
	* mln/core/alias/point1d.hh,
	* mln/core/alias/point2d.hh,
	* mln/core/alias/point3d.hh,
	* mln/core/dpoint.hh,
	* mln/core/internal/neighborhood_base.hh,
	* mln/core/point.hh,
	* mln/core/site_set/p_centered.hh,
	* mln/core/site_set/p_vaccess.hh,
	* mln/fun/v2v/hsl_to_rgb.hh,
	* mln/fun/v2v/rgb_to_hsl.hh,
	* mln/io/magick/save.hh,
	* mln/io/plot/save.hh,